--- a/views/forgotpassword.ejs
+++ b/views/forgotpassword.ejs
@@ -1,87 +1,111 @@
 <%- include('layouts/outerheader'); -%>
 
     <body>
+        <div style="height: 100px;">
+        </div>
+        <div class="main-div">
+            <div class="logo">
+                
+            </div>
         
         <% if (successCheck && successCheck.length> 0) { %>
-        <form name="myform" method="post" action="/forgotpassword">
-
-            <fieldset class="forgotpasswordform">
-                <h4>Reset Password</h4>
-                <div class="forgotpasswordfield">
-                    <input type="hidden" id="userName" placeholder="Username" name="userName"
-                    value="<%= typeof successCheck[0].userName !== 'undefined' ? successCheck[0].userName : '' %>">
-                </div><br>
-                <div class="Registerfield">
-                    <input id="securityQuestion" placeholder="Security Question" type="hidden" name="securityQuestion"
+            <form method="post" action="/forgotpassword" class="login-form">
+                <div class="login-box">
+                    <% if (errors && errors.length> 0) { %>
+                        <div class="error-message">
+                          <% for (let i=0; i < errors.length; i++) { %>
+                            <p class="error-text">
+                              <%= errors[i].msg %>
+                            </p>
+                            <% } %>
+                        </div>
+                        <% } %>
+                    <p class="title">Change Password</p>
+                    <div class="name-field">
+                        
+                        <input type="hidden" id="userName" placeholder="Username" name="userName"
+                        value="<%= typeof successCheck[0].userName !== 'undefined' ? successCheck[0].userName : '' %>">
+                    </div>
+              <div class="name-field">
+                
+                <input id="securityQuestion" placeholder="Security Question" type="hidden" name="securityQuestion"
                     value="<%= typeof successCheck[0].securityQuestion !== 'undefined' ? successCheck[0].securityQuestion : '' %>">
+            </div>
+            <div class="name-field">
+              
+                <input id="securityAnswer" placeholder="Security Answer" type="hidden" name="securityAnswer"
+                value="<%= typeof successCheck[0].securityAnswer !== 'undefined' ? successCheck[0].securityAnswer : '' %>">
+          </div>
+          <div class="name-field">
+            <label for="user-field">
+                <p>
+                   New Password : 
+                </p>
+            </label>
+            <input id="password" placeholder="password" type="text" name="password">
+
+        </div>
+        <div class="name-field">
+            <label for="user-field">
+                <p>
+                   Confirm Password : 
+                </p>
+            </label>
+            <input id="confirmpassword" placeholder="confirmpassword" type="text" name="confirmpassword">
+        </div><br>
+                   
+                    <div class="login-btn-field">
+                      <button class="register" type="register">Submit</button>
+                    </div>
                 </div>
-                <div class="Registerfield">
-                    <input id="securityAnswer" placeholder="Security Answer" type="hidden" name="securityAnswer"
-                    value="<%= typeof successCheck[0].securityAnswer !== 'undefined' ? successCheck[0].securityAnswer : '' %>">
-                </div>
-
-                <!-- <div class="forgotpasswordfield">
-                    <label>Date of Birth</label><br>
-                    <input type="date" id="dob" placeholder="DOB" name="dob">
-                </div><br> -->
-
-                <div class="forgotpasswordfield">
-                    <label>New Password</label><br>
-                    <input type="password" id="password" placeholder="New Password" name="password">
-                </div><br>
-
-                <div class="forgotpasswordfield">
-                    <label>Confirm New Password</label><br>
-                    <input type="password" id="confirmpassword" placeholder="Confirm Password" name="confirmpassword">
-                </div><br>
-
-                <div class="resetpasswordbuttonsub">
-                    <button class="pass" type="pass">Reset Password</button><br>
-                </div>
-                <div class="error-text">
-                    <% if (errors && errors.length> 0) { %>
-                        <p class="error-text">
-                            <%= errors[0].msg %>
-                        </p>
-                        <% } %>
-                </div>
-
-            </fieldset>
-
-        </form>
+            </form>
         <% }else { %>
-        <form name="myform-check" method="post" action="/forgotpassword-check">
-
-            <fieldset class="forgotpasswordform">
-                <h4>Reset Password</h4>
-                <div class="forgotpasswordfield">
-                    <label>Username</label><br>
-                    <input type="userName" id="userName" placeholder="Username" name="userName">
-                </div><br>
-                <div class="Registerfield">
-                    <label>Security Question</label><br>
-                    <input id="securityQuestion" placeholder="Security Question" type="text" name="securityQuestion"
-                    value="<%= typeof securityQuestion !== 'undefined' ? securityQuestion : '' %>">
-                </div>
-                <div class="Registerfield">
-                    <label>Security Answer</label><br>
-                    <input id="securityAnswer" placeholder="Security Answer" type="text" name="securityAnswer"
-                    value="<%= typeof securityAnswer !== 'undefined' ? securityAnswer : '' %>">
-                </div>
-                <div class="resetpasswordbuttonsub">
-                    <button class="pass" type="pass">Submit</button><br>
-                </div>
-                <div class="error-text">
+            <form method="post" action="/forgotpassword-check" class="login-form">
+                <div class="login-box">
                     <% if (errors && errors.length> 0) { %>
-                        <p class="error-text">
-                            <%= errors[0].msg %>
-                        </p>
+                        <div class="error-message">
+                          <% for (let i=0; i < errors.length; i++) { %>
+                            <p class="error-text">
+                              <%= errors[i].msg %>
+                            </p>
+                            <% } %>
+                        </div>
                         <% } %>
+                    <p class="title">Forgot Password</p>
+                    <div class="name-field">
+                        <label for="user-field">
+                            <p>
+                                User Name : 
+                            </p>
+                        </label>
+                        <input type="text" id="userName" placeholder="Username" name="userName">
+                    </div>
+                   
+              <div class="name-field">
+                <label for="user-field">
+                    <p>
+                        Security Question : 
+                    </p>
+                </label>
+                <input id="securityQuestion" placeholder="Security Question" type="text" name="securityQuestion"
+                      value="<%= typeof securityQuestion !== 'undefined' ? securityQuestion : '' %>">
+            </div>
+            <div class="name-field">
+              <label for="user-field">
+                  <p>
+                     Security Answer : 
+                  </p>
+              </label>
+              <input id="securityAnswer" placeholder="Security Answer" type="text" name="securityAnswer"
+                      value="<%= typeof securityAnswer !== 'undefined' ? securityAnswer : '' %>">
+          </div><br>
+                   
+                    <div class="login-btn-field">
+                      <button class="register" type="register">Submit</button>
+                    </div>
                 </div>
-
-            </fieldset>
-
-        </form>
+            </form>
         <% } %>
+        </div>
     </body>
     <%- include('layouts/footer'); -%>
