--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -11,9 +11,9 @@
 
                     </li>
                     <li>
-                        <a href="inner.html">My Profile</a>
+                        <a href="/profile">My Profile</a>
                     </li>
-                    <li><a href="contact.html">Logout</a></li>
+                    <li><a href="/logout">Logout</a></li>
                 </ul>
             </nav>
         </div>
