--- a/public/css/form.css
+++ b/public/css/form.css
@@ -399,7 +399,7 @@ nav ul li a:hover {
 
 .menubar {
     margin-top: -20px;
-    width: 1420px;
+    /* width: 1420px; */
 }
 
 .image-container {
@@ -409,7 +409,7 @@ nav ul li a:hover {
 
 .slider-wrapper {
     position: relative;
-    width: 1420px;
+    /* w idth: 1420px; */
     /* margin: 0 auto; */
 
 
@@ -537,9 +537,8 @@ color {
 }
 
 html, body {
-    background: #191919;
-    width: 100%;
-    padding: 0 2rem
+    width: auto;
+    padding: 0 0
 }
 
 .main-div {
@@ -668,6 +667,45 @@ p {
         width: 40vw;
     }
 }
+
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+  }
+  
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+  
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+  
+  @media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }
 
 
 
