--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -1,6 +1,16 @@
 <br>
 
 <footer>
+  <script>
+
+function openNav() {
+  document.getElementById("mySidenav").style.width = "250px";
+}
+
+function closeNav() {
+  document.getElementById("mySidenav").style.width = "0";
+}
+  </script>
   <!-- <p>&copy;Copyrights owned by TechTitans, Conestoga College, 2023</p>  -->
 </footer>
 
