--- a/views/register.ejs
+++ b/views/register.ejs
@@ -48,7 +48,7 @@
                    Confirm Email : 
                 </p>
             </label>
-            <input id="confirmemail" placeholder="Password" type="text" name="confirmemail">
+            <input id="confirmemail" placeholder="Confirm Email" type="text" name="confirmemail">
 
             
         </div>
