--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -17,7 +17,25 @@
                         <% } %>
                     </div>
                     <% } %>
+                    <% if (success && success.length> 0) { %>
+                        <div class="success-message">
+                          <% for (let i=0; i < success.length; i++) { %>
+                            <p class="success-text">
+                              <%= success[i].msg %>
+                            </p>
+                            <% } %>
+                        </div>
+                        <% } %>
                 <p class="title">Profile</p>
+                <div class="name-field">
+                    <label for="name-field">
+                        <p>
+                            Name : 
+                        </p>
+                    </label>
+                    <input id="name" placeholder="Name" type="text" name="name"
+                    value="<%= typeof user[0].user.name !== 'undefined' ?  user[0].user.name : '' %>">
+                </div>
                 <div class="email-field">
                     <label for="email-field">
                         <p>
@@ -27,8 +45,6 @@
                     <input id="email" placeholder="Email" type="email" name="email"
                     value="<%= typeof user[0].user.email !== 'undefined' ?  user[0].user.email : '' %>">
                 </div>
-                <input id="id"  type="hidden" name="id"
-                value="<%= typeof user[0].user.id !== 'undefined' ?  user[0].user.id : '' %>">
                 <div class="image-field">
                     <label for="image-field">
                         <p>
@@ -38,15 +54,6 @@
                     <input id="profile_image" placeholder="" type="profile_image" name="profile_image"
                     value="<%= typeof user[0].user.profile_image !== 'undefined' ?  user[0].user.profile_image : '' %>">
                 </div>
-                <!-- <div class="password-field">
-                    <label for="pass-field">
-                        <p>
-                            Password : 
-                        </p>
-                    </label>
-                    <input id="pass-field" placeholder="Password" type="password" name="password">
-
-                </div> -->
                 <div class="about-field">
                     <label for="about-field">
                         <p>
@@ -58,7 +65,7 @@
 
                 </div>
                 <div class="login-btn-field">
-                    <input type="submit" value="Login" class="login-btn">
+                    <input type="submit" value="Update" class="login-btn">
                 </div>
             </div>
         </form>
