--- a/views/register.ejs
+++ b/views/register.ejs
@@ -39,7 +39,7 @@
                      Email : 
                   </p>
               </label>
-              <input id="pass-field" placeholder="Password" type="text" name="email">
+              <input id="pass-field" placeholder="Email" type="text" name="email">
 
           </div>
           <div class="name-field">
