--- a/views/layouts/innerheader.ejs
+++ b/views/layouts/innerheader.ejs
@@ -9,7 +9,25 @@
     <title>ArtBid</title>
 </head>
 
+
+
 <div class="logotitle">
     <a href=""> <img src="images/logo_transparent.png" alt="bid Logo"> </a>
     <h2> </h2>
+</div>
+
+<div class="menubar">
+    <nav>
+        <ul>
+            <li><a href="welcome">Home</a></li>
+            <li>
+                <a href="uploadart">Upload Art</a>
+
+            </li>
+            <li>
+                <a href="profile">My Profile</a>
+            </li>
+            <li><a href="/logout">Logout</a></li>
+        </ul>
+    </nav>
 </div>
