--- a/public/css/form.css
+++ b/public/css/form.css
@@ -544,9 +544,9 @@ html, body {
 .main-div {
     height: 100vh;
     display: flex;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
     align-items: center;
-    padding: 2rem 0;
+     padding: 2rem 0; 
 }
 
 .logo img {
@@ -562,16 +562,21 @@ html, body {
     inset 0 0 1rem var(--logo-color)
 }
 
-.title {
-    color: white;
+.main-div .title {
+    color: rgb(18, 1, 1);
     text-align: center;
     font-size: 3rem;
-    text-shadow: 0 0 .2rem #fff,
-    0 0 .2rem #fff,
-    0 0 2rem #bc13fe,
-    0 0 0.8rem #bc13fe,
-    0 0 2.8rem #bc13fe;
+    
 }
+
+.main-div form {
+    margin-left: 100px;
+    
+    
+}
+
+
+
 
 .login-form  {
     background-color: var(--login-box-bg-color);
@@ -599,7 +604,19 @@ input[type='text'], input[type='password'] {
     width: 100%;
     height: 30px;
     border-radius: 5px;
-    border-color: transparent;
+    border-color: black;
+    padding: 1rem;
+    font-size: 1rem;
+    font-family: var(--txt-style);
+    font-weight: 500;
+    margin-top: .8rem;
+}
+
+textarea[type='text'] {
+    width: 100%;
+    height: 170px;
+    border-radius: 5px;
+    border-color: black;
     padding: 1rem;
     font-size: 1rem;
     font-family: var(--txt-style);
