--- a/public/css/form.css
+++ b/public/css/form.css
@@ -600,7 +600,7 @@ html, body {
     padding: 1rem;
 }
 
-input[type='text'], input[type='password'] {
+input[type='text'], input[type='password'] , input[type='email'] {
     width: 100%;
     height: 30px;
     border-radius: 5px;
