--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,12 +1,12 @@
-<%- include('layouts/outerheader'); -%>
+<%- include('layouts/innerheader'); -%>
 
   <body>
-    <div class="main-div"> 
+    <div class="main-div" style="background-image: url('images/bg1.jpeg');"> 
         <div class="logo">
 
         </div>
        
-        <form method="post" action="/update-profile" enctype="multipart/form-data" class="login-form">
+        <form method="post" action="/update-profile" enctype="multipart/form-data">
             <div class="">
                 <% if (errors && errors.length> 0) { %>
                     <div class="error-message">
@@ -32,8 +32,8 @@
                     <input id="name" placeholder="Name" type="text" name="name"
                     value="<%= typeof user[0].user.name !== 'undefined' ?  user[0].user.name : '' %>">
                 </div>
-                <div class="email-field">
-                    <label for="email-field">
+                <div class="name-field">
+                    <label for="name-field">
                         <p>
                             Email : 
                         </p>
