--- a/views/forgotpassword.ejs
+++ b/views/forgotpassword.ejs
@@ -20,7 +20,7 @@
                             <% } %>
                         </div>
                         <% } %>
-                    <p class="title">Change Password</p>
+                    <h3 class="title-heading">Change Password</h3>
                     <div class="name-field">
                         
                         <input type="hidden" id="userName" placeholder="Username" name="userName"
@@ -71,7 +71,7 @@
                             <% } %>
                         </div>
                         <% } %>
-                    <p class="title">Forgot Password</p>
+                    <h3 class="title-heading">Forgot Password</h3>
                     <div class="name-field">
                         <label for="user-field">
                             <p>
