--- a/views/register.ejs
+++ b/views/register.ejs
@@ -23,7 +23,7 @@
                     <% } %>
                 </div>
                 <% } %>
-            <p class="title">Register</p>
+                <h3 class="title-heading">Register</h3>
             <div class="name-field">
                 <label for="user-field">
                     <p>
