--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,7 +17,7 @@
                         <% } %>
                     </div>
                     <% } %>
-                <p class="title">Login</p>
+                    <h3 class="title-heading">Login</h3>
                 <div class="name-field">
                     <label for="user-field">
                         <p>
@@ -36,6 +36,9 @@
                     <input id="pass-field" placeholder="Password" type="password" name="password">
 
                 </div>
+                <div class="login-btn-field">
+                    <input type="submit" value="Login" class="login-btn">
+                </div><br>
                 <div class="forgotpasswordlink">
                     <a href="/forgotpassword" data-toggle="modal" data-dismiss="modal"
                       class="close-modal pointer-class" data-modalid="forgotModal"> Forgot your password?</a>
@@ -47,9 +50,6 @@
                             New user? Register here
                         </p>
                     </a>
-                </div>
-                <div class="login-btn-field">
-                    <input type="submit" value="Login" class="login-btn">
                 </div>
             </div>
         </form>
