--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,7 +6,7 @@
 
         </div>
        
-        <form method="post" action="/update-profile" enctype="multipart/form-data">
+        <form method="post" action="/update-profile" id="submitFormValidate" enctype="multipart/form-data">
             <div class="">
                 <% if (errors && errors.length> 0) { %>
                     <div class="error-message">
@@ -29,43 +29,93 @@
                             Name : 
                         </p>
                     </label>
-                    <input id="name" placeholder="Name" type="text" name="name"
+                    <input id="name" placeholder="Name" type="text" name="name" class="inputError"
                     value="<%= typeof user[0].user.name !== 'undefined' ?  user[0].user.name : '' %>">
                 </div>
+                <span role="alert" class="requiredError" aria-hidden="true">
+                    Please enter Name
+                </span>
                 <div class="name-field">
                     <label for="name-field">
                         <p>
                             Email : 
                         </p>
                     </label>
-                    <input id="email" placeholder="Email" type="email" name="email"
+                    <input id="email" placeholder="Email" class="inputError" type="email" name="email"
                     value="<%= typeof user[0].user.email !== 'undefined' ?  user[0].user.email : '' %>">
                 </div>
+                <span role="alert" class="requiredError" aria-hidden="true">
+                    Please enter Email
+                  </span>
                 <div class="image-field">
                     <label for="image-field">
                         <p>
                             Profile Image : 
                         </p>
                     </label>
-                    <img class="logo" src="<%= user[0].user.profile_image %>" alt="My_Logo" style="width: 200px; height: 200px;" type="file" name="profile_image">
-                    <input type="file" id="fileinput" name ="profile_image" multiple="multiple" accept="image/*" />
-                   
+                    <% if (user[0].user.profile_image) { %>
+                        <img class="logo" src="<%= user[0].user.profile_image %>" alt="My_Logo" style="width: 200px; height: 200px;" type="file" name="profile_image">
+                        <input type="file" id="fileinput" name ="profile_image" multiple="multiple" accept="image/*" />
+                    <% } else {%>
+                        <input type="file" id="fileinput" class="inputError" name ="profile_image" multiple="multiple" accept="image/*" />
+                        <span role="alert" class="requiredError" aria-hidden="true">
+                            Please upload Image
+                          </span>
+                        <% } %>
                 </div>
+                
                 <div class="about-field">
                     <label for="about-field">
                         <p>
                             About : 
                         </p>
                     </label>
-                    <input id="about-field" placeholder="About" type="text" name="about"
+                    <input id="about-field" placeholder="About" type="text" name="about" class="inputError"
                     value="<%= typeof user[0].user.about !== 'undefined' ?  user[0].user.about : '' %>">
-
                 </div>
+                <span role="alert" class="requiredError" aria-hidden="true">
+                    Please enter About
+                  </span>
                 <div class="login-btn-field">
-                    <input type="submit" value="Update" class="login-btn">
+                    <input type="submit" value="Update" class="login-btn" onclick="validateForm(event)">
                 </div>
             </div>
         </form>
     </div>
   </body>
+  <script>
+    // const submit1 = document.getElementById("submitId");
+    // submit1.addEventListener("click", validate);
+    function validateForm(e) {
+        const form = document.getElementById('submitFormValidate')
+        e.preventDefault();
+        const userNameField = document.getElementsByClassName("inputError");
+        let vaClass = true;
+            for (var i = 0; i < userNameField.length; i++) {
+                if (!userNameField[i].value) {
+                    vaClass = false;
+                    const showRequiredErr = document.getElementsByClassName("requiredError");
+                    console.log(showRequiredErr)
+                    showRequiredErr[i].classList.add("visible");
+                    userNameField[i].classList.add("invalid");
+                    showRequiredErr[i].setAttribute("aria-hidden", false);
+                    showRequiredErr[i].setAttribute("aria-invalid", true);
+                }else{
+                    console.log('dfd')
+                    const showRequiredErr = document.getElementsByClassName("requiredError");
+                    showRequiredErr[i].classList.remove("visible");
+                    userNameField[i].classList.remove("invalid");
+                    showRequiredErr[i].setAttribute("aria-hidden", true);
+                    showRequiredErr[i].setAttribute("aria-invalid", false);
+    
+                }
+            }
+        if(vaClass){
+            form.submit();
+        }else{
+            return false;
+        }
+    }
+    
+    </script>
   <%- include('layouts/footer'); -%>
