--- a/public/css/form.css
+++ b/public/css/form.css
@@ -739,6 +739,8 @@ p {
     text-align: center;
 }
 
+@media (max-width: 767.98px) { .border-sm-start-none { border-left: none !important; } }
+
 
 
 
