--- a/views/forgotpassword.ejs
+++ b/views/forgotpassword.ejs
@@ -4,108 +4,174 @@
         <div style="height: 100px;">
         </div>
         <div class="main-div">
-            <div class="logo">
-                
-            </div>
-        
+        <div class="logo">
+        </div>
         <% if (successCheck && successCheck.length> 0) { %>
-            <form method="post" action="/forgotpassword" class="login-form">
+            <form method="post" action="/forgotpassword" class="login-form" id="submitFormValidate">
                 <div class="login-box">
-                    <% if (errors && errors.length> 0) { %>
-                        <div class="error-message">
-                          <% for (let i=0; i < errors.length; i++) { %>
-                            <p class="error-text">
-                              <%= errors[i].msg %>
-                            </p>
-                            <% } %>
-                        </div>
-                        <% } %>
                     <h3 class="title-heading">Change Password</h3>
                     <div class="name-field">
-                        
                         <input type="hidden" id="userName" placeholder="Username" name="userName"
                         value="<%= typeof successCheck[0].userName !== 'undefined' ? successCheck[0].userName : '' %>">
                     </div>
-              <div class="name-field">
-                
-                <input id="securityQuestion" placeholder="Security Question" type="hidden" name="securityQuestion"
+                <div class="name-field">
+                    <input id="securityQuestion" placeholder="Security Question" type="hidden" name="securityQuestion"
                     value="<%= typeof successCheck[0].securityQuestion !== 'undefined' ? successCheck[0].securityQuestion : '' %>">
-            </div>
-            <div class="name-field">
-              
-                <input id="securityAnswer" placeholder="Security Answer" type="hidden" name="securityAnswer"
-                value="<%= typeof successCheck[0].securityAnswer !== 'undefined' ? successCheck[0].securityAnswer : '' %>">
-          </div>
-          <div class="name-field">
-            <label for="user-field">
-                <p>
-                   New Password : 
-                </p>
-            </label>
-            <input id="password" placeholder="password" type="text" name="password">
-
-        </div>
-        <div class="name-field">
-            <label for="user-field">
-                <p>
-                   Confirm Password : 
-                </p>
-            </label>
-            <input id="confirmpassword" placeholder="confirmpassword" type="text" name="confirmpassword">
-        </div><br>
-                   
-                    <div class="login-btn-field">
-                      <button class="register" type="register">Submit</button>
-                    </div>
                 </div>
+                <div class="name-field">
+                    <input id="securityAnswer" placeholder="Security Answer" type="hidden" name="securityAnswer"
+                value="<%= typeof successCheck[0].securityAnswer !== 'undefined' ? successCheck[0].securityAnswer : '' %>">
+                </div>
+                <div class="name-field">
+                    <label for="user-field">
+                        <p>
+                        New Password : 
+                        </p>
+                    </label>
+                    <input id="password" placeholder="New Password" type="text" name="password" class="inputError">
+                </div>
+                <span role="alert" class="requiredError" aria-hidden="true">
+                    Please enter New Password
+                </span>
+                <div class="name-field">
+                    <label for="user-field">
+                        <p>
+                        Confirm Password : 
+                        </p>
+                    </label>
+                    <input id="confirmpassword" placeholder="Confirm Password" type="text" name="confirmpassword" class="inputError">
+                </div>
+                <span role="alert" class="requiredError" aria-hidden="true">
+                    Please enter Confirm Password
+                </span>
+                <br>
+                <% if (errors && errors.length> 0) { %>
+                    <div class="error-message">
+                    <% for (let i=0; i < errors.length; i++) { %>
+                        <p class="error-text">
+                        <%= errors[i].msg %>
+                        </p>
+                        <% } %>
+                    </div>
+                    <% } %>
+                <div class="login-btn-field">
+                    <!-- <button class="register" type="register">Submit</button> -->
+                    <input id="submitId" value="Change Password" type="submit" class="login-btn" onclick="validateForm(event)">
+                </div>
+            </div>
             </form>
         <% }else { %>
-            <form method="post" action="/forgotpassword-check" class="login-form">
+            <form method="post" action="/forgotpassword-check" class="login-form" id="submitFormValidateSecurityCheck">
                 <div class="login-box">
-                    <% if (errors && errors.length> 0) { %>
-                        <div class="error-message">
-                          <% for (let i=0; i < errors.length; i++) { %>
-                            <p class="error-text">
-                              <%= errors[i].msg %>
-                            </p>
-                            <% } %>
-                        </div>
-                        <% } %>
                     <h3 class="title-heading">Forgot Password</h3>
                     <div class="name-field">
                         <label for="user-field">
                             <p>
-                                User Name : 
+                                Username : 
                             </p>
                         </label>
-                        <input type="text" id="userName" placeholder="Username" name="userName">
+                        <input type="text" id="userName" placeholder="Username" name="userName" class="inputErrorSecurityCheck">
                     </div>
-                   
-              <div class="name-field">
-                <label for="user-field">
-                    <p>
-                        Security Question : 
-                    </p>
-                </label>
-                <input id="securityQuestion" placeholder="Security Question" type="text" name="securityQuestion"
-                      value="<%= typeof securityQuestion !== 'undefined' ? securityQuestion : '' %>">
-            </div>
-            <div class="name-field">
-              <label for="user-field">
-                  <p>
-                     Security Answer : 
-                  </p>
-              </label>
-              <input id="securityAnswer" placeholder="Security Answer" type="text" name="securityAnswer"
-                      value="<%= typeof securityAnswer !== 'undefined' ? securityAnswer : '' %>">
-          </div><br>
-                   
+                    <span role="alert" class="requiredErrorSecurityCheck" aria-hidden="true">
+                        Please enter Username
+                      </span>
+                    <div class="name-field">
+                    <label for="user-field">
+                        <p>
+                            Security Question : 
+                        </p>
+                    </label>
+                    <input id="securityQuestion" placeholder="Security Question" type="text" name="securityQuestion" class="inputErrorSecurityCheck"
+                        value="<%= typeof securityQuestion !== 'undefined' ? securityQuestion : '' %>">
+                    </div>
+                    <span role="alert" class="requiredErrorSecurityCheck" aria-hidden="true">
+                        Please enter Security Question
+                    </span>
+                    <div class="name-field">
+                    <label for="user-field">
+                        <p>
+                            Security Answer : 
+                        </p>
+                    </label>
+                    <input id="securityAnswer" placeholder="Security Answer" type="text" name="securityAnswer" class="inputErrorSecurityCheck"
+                            value="<%= typeof securityAnswer !== 'undefined' ? securityAnswer : '' %>">
+                    </div>
+                    <span role="alert" class="requiredErrorSecurityCheck" aria-hidden="true">
+                        Please enter Security Answer
+                    </span>
+                    <br>
+                    <% if (errors && errors.length> 0) { %>
+                        <div class="error-message">
+                        <% for (let i=0; i < errors.length; i++) { %>
+                            <p class="error-text">
+                            <%= errors[i].msg %>
+                            </p>
+                        <% } %>
+                        </div>
+                    <% } %>
                     <div class="login-btn-field">
-                      <button class="register" type="register">Submit</button>
+                        <input id="submitIdVal" value="Submit" type="submit" class="login-btn" onclick="validateFormSecurityCheck(event)">
+                        <!-- <button class="register" type="register">Submit</button> -->
                     </div>
                 </div>
             </form>
         <% } %>
         </div>
     </body>
+    <script>
+        function validateFormSecurityCheck(e) {
+            const form = document.getElementById('submitFormValidateSecurityCheck')
+            e.preventDefault();
+            const userNameField = document.getElementsByClassName("inputErrorSecurityCheck");
+            let vaClass = true;
+            for (var i = 0; i < userNameField.length; i++) {
+                if (!userNameField[i].value) {
+                    vaClass = false;
+                    const showRequiredErr = document.getElementsByClassName("requiredErrorSecurityCheck");
+                    showRequiredErr[i].classList.add("visible");
+                    userNameField[i].classList.add("invalid");
+                    showRequiredErr[i].setAttribute("aria-hidden", false);
+                    showRequiredErr[i].setAttribute("aria-invalid", true);
+                }else{
+                    const showRequiredErr = document.getElementsByClassName("requiredErrorSecurityCheck");
+                    showRequiredErr[i].classList.remove("visible");
+                    userNameField[i].classList.remove("invalid");
+                    showRequiredErr[i].setAttribute("aria-hidden", true);
+                    showRequiredErr[i].setAttribute("aria-invalid", false);
+                }
+            }
+            if(vaClass){
+                form.submit();
+            }else{
+                return false;
+            }
+        }
+        function validateForm(e) {
+            const form = document.getElementById('submitFormValidate')
+            e.preventDefault();
+            const userNameField = document.getElementsByClassName("inputError");
+            let vaClass = true;
+            for (var i = 0; i < userNameField.length; i++) {
+                if (!userNameField[i].value) {
+                    vaClass = false;
+                    const showRequiredErr = document.getElementsByClassName("requiredError");
+                    showRequiredErr[i].classList.add("visible");
+                    userNameField[i].classList.add("invalid");
+                    showRequiredErr[i].setAttribute("aria-hidden", false);
+                    showRequiredErr[i].setAttribute("aria-invalid", true);
+                }else{
+                    const showRequiredErr = document.getElementsByClassName("requiredError");
+                    showRequiredErr[i].classList.remove("visible");
+                    userNameField[i].classList.remove("invalid");
+                    showRequiredErr[i].setAttribute("aria-hidden", true);
+                    showRequiredErr[i].setAttribute("aria-invalid", false);
+                }
+            }
+            if(vaClass){
+                form.submit();
+            }else{
+                return false;
+            }
+        }
+    </script>
     <%- include('layouts/footer'); -%>
