--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,9 +3,7 @@
   <body>
     <div class="main-div" style="background-image: url('images/bg1.jpeg');"> 
         <div class="logo">
-
         </div>
-       
         <form method="post" action="/update-profile" id="submitFormValidate" enctype="multipart/form-data">
             <div class="">
                 <% if (errors && errors.length> 0) { %>
@@ -14,14 +12,14 @@
                           <%= errors[0].msg %>
                         </p>
                     </div>
-                    <% } %>
-                    <% if (success && success.length> 0) { %>
-                        <div class="success-message">
-                            <p class="success-text">
-                              <%= success[0].msg %>
-                            </p>
-                        </div>
-                        <% } %>
+                <% } %>
+                <% if (success && success.length> 0) { %>
+                    <div class="success-message">
+                        <p class="success-text">
+                            <%= success[0].msg %>
+                        </p>
+                    </div>
+                <% } %>
                 <p class="title">Profile</p>
                 <div class="name-field">
                     <label for="name-field">
@@ -60,18 +58,19 @@
                         <input type="file" id="fileinput" class="inputError" name ="profile_image" multiple="multiple" accept="image/*" />
                         <span role="alert" class="requiredError" aria-hidden="true">
                             Please upload Image
-                          </span>
-                        <% } %>
+                        </span>
+                    <% } %>
                 </div>
-                
                 <div class="about-field">
                     <label for="about-field">
                         <p>
                             About : 
                         </p>
                     </label>
-                    <input id="about-field" placeholder="About" type="text" name="about" class="inputError"
-                    value="<%= typeof user[0].user.about !== 'undefined' ?  user[0].user.about : '' %>">
+                    <!-- <input id="about-field" placeholder="About" type="text" name="about" class="inputError"
+                    value="<%= typeof user[0].user.about !== 'undefined' ?  user[0].user.about : '' %>"> -->
+                    <textarea id="about-field" placeholder="About" type="text" name="about" class="inputError"
+                    value="<%= typeof user[0].user.about !== 'undefined' ?  user[0].user.about : '' %>"></textarea>
                 </div>
                 <span role="alert" class="requiredError" aria-hidden="true">
                     Please enter About
@@ -84,38 +83,33 @@
     </div>
   </body>
   <script>
-    // const submit1 = document.getElementById("submitId");
-    // submit1.addEventListener("click", validate);
     function validateForm(e) {
         const form = document.getElementById('submitFormValidate')
         e.preventDefault();
         const userNameField = document.getElementsByClassName("inputError");
         let vaClass = true;
-            for (var i = 0; i < userNameField.length; i++) {
-                if (!userNameField[i].value) {
-                    vaClass = false;
-                    const showRequiredErr = document.getElementsByClassName("requiredError");
-                    console.log(showRequiredErr)
-                    showRequiredErr[i].classList.add("visible");
-                    userNameField[i].classList.add("invalid");
-                    showRequiredErr[i].setAttribute("aria-hidden", false);
-                    showRequiredErr[i].setAttribute("aria-invalid", true);
-                }else{
-                    console.log('dfd')
-                    const showRequiredErr = document.getElementsByClassName("requiredError");
-                    showRequiredErr[i].classList.remove("visible");
-                    userNameField[i].classList.remove("invalid");
-                    showRequiredErr[i].setAttribute("aria-hidden", true);
-                    showRequiredErr[i].setAttribute("aria-invalid", false);
-    
-                }
+        for (var i = 0; i < userNameField.length; i++) {
+            if (!userNameField[i].value) {
+                vaClass = false;
+                const showRequiredErr = document.getElementsByClassName("requiredError");
+                console.log(showRequiredErr)
+                showRequiredErr[i].classList.add("visible");
+                userNameField[i].classList.add("invalid");
+                showRequiredErr[i].setAttribute("aria-hidden", false);
+                showRequiredErr[i].setAttribute("aria-invalid", true);
+            }else{
+                const showRequiredErr = document.getElementsByClassName("requiredError");
+                showRequiredErr[i].classList.remove("visible");
+                userNameField[i].classList.remove("invalid");
+                showRequiredErr[i].setAttribute("aria-hidden", true);
+                showRequiredErr[i].setAttribute("aria-invalid", false);
             }
+        }
         if(vaClass){
             form.submit();
         }else{
             return false;
         }
     }
-    
     </script>
   <%- include('layouts/footer'); -%>
