--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,96 +1,109 @@
 <%- include('layouts/outerheader'); -%>
 <body onload="document.getElementById('registerForm').reset()">
-
- 
-
-  
-
   <div style="height: 100px;">
   </div>
   <div class="main-div">
       <div class="logo">
-          
       </div>
-      
-      <form method="post" action="/register" class="login-form">
+      <form method="post" action="/register" class="login-form" id="submitFormValidate">
         <div class="login-box">
-            <% if (errors && errors.length> 0) { %>
-                <div class="error-message">
-                  <% for (let i=0; i < errors.length; i++) { %>
-                    <p class="error-text">
-                      <%= errors[i].msg %>
-                    </p>
-                    <% } %>
-                </div>
-                <% } %>
-                <h3 class="title-heading">Register</h3>
+            <h3 class="title-heading">Register</h3>
             <div class="name-field">
                 <label for="user-field">
                     <p>
-                        User Name : 
+                        Username : 
                     </p>
                 </label>
-                <input id="email" placeholder="Username" type="text" name="userName"
+                <input id="email" placeholder="Username" type="text" name="userName" class="inputError"
                 value="<%= typeof userName !== 'undefined' ? userName : '' %>">
             </div>
+            <span role="alert" class="requiredError" aria-hidden="true">
+              Please enter Username
+            </span>
             <div class="name-field">
               <label for="user-field">
                   <p>
                      Email : 
                   </p>
               </label>
-              <input id="pass-field" placeholder="Email" type="text" name="email">
+              <input id="pass-field" placeholder="Email" type="text" name="email" class="inputError">
 
-          </div>
-          <div class="name-field">
-            <label for="user-field">
-                <p>
-                   Confirm Email : 
-                </p>
-            </label>
-            <input id="confirmemail" placeholder="Confirm Email" type="text" name="confirmemail">
-
-            
-        </div>
-          <div class="name-field">
-            <label for="user-field">
-                <p>
-                    Password : 
-                </p>
-            </label>
-            <input id="pass-field" placeholder="Password" type="password" name="password"
-            value="<%= typeof userName !== 'undefined' ? userName : '' %>">
-        </div>
-        <div class="name-field">
-          <label for="user-field">
-              <p>
-                  Confirm Password : 
-              </p>
-          </label>
-          <input id="email" placeholder="Confirm password" type="password" name="confirmpassword"
-          value="<%= typeof confirmpassword !== 'undefined' ? confirmpassword : '' %>">
-      </div>
-      <div class="name-field">
-        <label for="user-field">
-            <p>
-                Security Question : 
-            </p>
-        </label>
-        <input id="securityQuestion" placeholder="Security Question" type="text" name="securityQuestion"
-              value="<%= typeof securityQuestion !== 'undefined' ? securityQuestion : '' %>">
-    </div>
-    <div class="name-field">
-      <label for="user-field">
-          <p>
-             Security Answer : 
-          </p>
-      </label>
-      <input id="securityAnswer" placeholder="Security Answer" type="text" name="securityAnswer"
-              value="<%= typeof securityAnswer !== 'undefined' ? securityAnswer : '' %>">
-  </div><br>
-           
+            </div>
+            <span role="alert" class="requiredError" aria-hidden="true">
+              Please enter Email
+            </span>
+            <div class="name-field">
+              <label for="user-field">
+                  <p>
+                    Confirm Email : 
+                  </p>
+              </label>
+              <input id="confirmemail" placeholder="Confirm Email" type="text" name="confirmemail" class="inputError">
+            </div>
+            <span role="alert" class="requiredError" aria-hidden="true">
+              Please enter Confirm Email
+            </span>
+            <div class="name-field">
+              <label for="user-field">
+                  <p>
+                      Password : 
+                  </p>
+              </label>
+              <input id="pass-field" placeholder="Password" type="password" name="password" class="inputError"
+              value="<%= typeof userName !== 'undefined' ? userName : '' %>">
+            </div>
+            <span role="alert" class="requiredError" aria-hidden="true">
+              Please enter Password
+            </span>
+            <div class="name-field">
+              <label for="user-field">
+                  <p>
+                      Confirm Password : 
+                  </p>
+              </label>
+              <input id="pass-field" placeholder="Confirm password" type="password" name="confirmpassword" class="inputError"
+              value="<%= typeof confirmpassword !== 'undefined' ? confirmpassword : '' %>">
+            </div>
+            <span role="alert" class="requiredError" aria-hidden="true">
+              Please enter Confirm Password
+            </span>
+            <div class="name-field">
+              <label for="user-field">
+                  <p>
+                      Security Question : 
+                  </p>
+              </label>
+              <input id="securityQuestion" placeholder="Security Question" type="text" name="securityQuestion" class="inputError"
+                    value="<%= typeof securityQuestion !== 'undefined' ? securityQuestion : '' %>">
+            </div>
+            <span role="alert" class="requiredError" aria-hidden="true">
+              Please enter Security Question
+            </span>
+            <div class="name-field">
+              <label for="user-field">
+                  <p>
+                    Security Answer : 
+                  </p>
+              </label>
+              <input id="securityAnswer" placeholder="Security Answer" type="text" name="securityAnswer" class="inputError"
+                      value="<%= typeof securityAnswer !== 'undefined' ? securityAnswer : '' %>">
+            </div>
+              <span role="alert" class="requiredError" aria-hidden="true">
+                Please enter security Answer
+            </span>
+            <br>
+            <% if (errors && errors.length> 0) { %>
+              <div class="error-message">
+                <% for (let i=0; i < errors.length; i++) { %>
+                  <p class="error-text">
+                    <%= errors[i].msg %>
+                  </p>
+                  <% } %>
+              </div>
+            <% } %>
             <div class="login-btn-field">
-              <button class="register" type="register">Create Account</button>
+              <input id="submitId" value="Create Account" type="submit" class="login-btn" onclick="validateForm(event)">
+              <!-- <button class="register" type="register">Create Account</button> -->
             </div>
         </div>
     </form>
@@ -98,6 +111,35 @@
   <div style="height: 100px;">
   </div>
 </body>
-  
+<script>
+  function validateForm(e) {
+      const form = document.getElementById('submitFormValidate')
+      e.preventDefault();
+      const userNameField = document.getElementsByClassName("inputError");
+      let vaClass = true;
+          for (var i = 0; i < userNameField.length; i++) {
+              if (!userNameField[i].value) {
+                  vaClass = false;
+                  const showRequiredErr = document.getElementsByClassName("requiredError");
+                  console.log(showRequiredErr)
+                  showRequiredErr[i].classList.add("visible");
+                  userNameField[i].classList.add("invalid");
+                  showRequiredErr[i].setAttribute("aria-hidden", false);
+                  showRequiredErr[i].setAttribute("aria-invalid", true);
+              }else{
+                  const showRequiredErr = document.getElementsByClassName("requiredError");
+                  showRequiredErr[i].classList.remove("visible");
+                  userNameField[i].classList.remove("invalid");
+                  showRequiredErr[i].setAttribute("aria-hidden", true);
+                  showRequiredErr[i].setAttribute("aria-invalid", false);
+              }
+          }
+      if(vaClass){
+          form.submit();
+      }else{
+          return false;
+      }
+  }
+  </script>
 
   <%- include('layouts/footer'); -%>
